profile div correction & soft skill alignment

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ h3 {
   color: #66BFBF;
   font-family: 'Montserrat', sans-serif;
 }
+  .profile{
+    width: 50%;
+    margin-left:280px;
+  }
 a{
   color:#11999E;
   font-family: 'Montserrat', sans-serif;
@@ -56,15 +60,7 @@ a:hover{
 margin: 40px auto 0 auto;
 padding: 0 0 20px;
 }
-.bottom-cloud {
-  position: absolute;
-}
 
-.top-cloud {
-  position: relative;
-  left: 250px;
-  top: 20px;
-}
 .skill-row{
   width: 50%;
   margin: 10px auto 10px auto;
@@ -81,12 +77,7 @@ width: 40%;
 .computer-img{
   width: 35%;
 }
-  .mountain{
-    padding-bottom: 20px;
-    width: 50%;
-  }
   .self-des{
-    text-align: center;
     line-height:2;
     margin: 8px auto 8px auto;
   }
@@ -109,7 +100,7 @@ hr{
 }
 li{
   text-align: left;
-  margin-left: 190px;
+  margin-left: 170px;
 }
 
 .btn {
